# snow_break_auto_trail

./: Cargo.toml
src/: capture.rs  main.rs  settings.rs  window_util.rs
src/graphic/: capture.rs  dxgi.rs  mod.rs
src/task/: mod.rs  trail_task.rs
src/utils/: mod.rs
